--- a/_includes/youtube.html
+++ b/_includes/youtube.html
@@ -5,10 +5,7 @@
 <style>
   .embed-container {
     position: relative;
-    padding-bottom: 56.25%;
-    height: 0;
-    overflow: hidden;
-    max-width: 100%;
+    margin-bottom: 20px;;
   }
 
   .embed-container iframe,
